# image-manipulator

./: .gitignore  1E473582.tmp  CMakeLists.txt  README.md  analysis.txt  denoiseAll.sh  denoiseAndAnalyse.sh  makeCharacteristicsAnalysis.sh
src/: main.cpp
src/lib/: manipulations.cpp  manipulations.h
src/manipulations/: helpers.cpp  helpers.h  t0-other.cpp  t0-other.h  t1-analysis.cpp  t1-analysis.h  t1-basic.cpp  t1-basic.h  t1-geometric.cpp  t1-geometric.h  t1-noise-removal-operations.cpp  t1-noise-removal-operations.h  t1-noise-removal.cpp  t1-noise-removal.h  t2-characteristics.cpp  t2-characteristics.h  t2-filters.cpp  t2-filters.h  t2-histogram.cpp  t2-histogram.h  t2-quality-improvement.cpp  t2-quality-improvement.h  t3-morphological-operations.cpp  t3-morphological-operations.h  t3-segmentation.cpp  t3-segmentation.h
src/manipulations/task1/: analysis.cpp  analysis.h  basic.cpp  basic.h  geometric.cpp  geometric.h  noise-removal-operations.cpp  noise-removal-operations.h
src/manipulations/task2/: characteristics.cpp  characteristics.h  filters.cpp  filters.h  histogram.cpp  histogram.h
src/manipulations/task3/: morphological-operations.cpp  morphological-operations.h  segmentation.cpp  segmentation.h
src/manipulations/task4/: discrete-fourier-transform.cpp  discrete-fourier-transform.h  fourier-filters.cpp  fourier-filters.h  fourier-transform.cpp  fourier-transform.h
